build a docker image and run with docker-compose